--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
-/*@import url(http://fonts.googleapis.com/earlyaccess/notosanssc.css);
+@import url(http://fonts.googleapis.com/earlyaccess/notosanssc.css);
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
-@import url(https://fonts.googleapis.com/css?family=Noto%20Serif%20KR);
+/*@import url(https://fonts.googleapis.com/css?family=Noto%20Serif%20KR);
 @import url(https://fonts.googleapis.com/css?family=Noto%20Serif%20JP);
 @import url(https://fonts.googleapis.com/css?family=Noto%20Serif%20SC); */
 
@@ -78,5 +78,5 @@ body {
     color: rgba(255, 255, 255, 1);
     font-family: "Consolas";
 
-    cursor: pointer;
+    cursor: default;
 }
