--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
-@import url(http://fonts.googleapis.com/earlyaccess/notosanssc.css);
-@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
+@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url(https://fonts.googleapis.com/earlyaccess/notosanssc.css);
+@import url(https://fonts.googleapis.com/earlyaccess/notosansjp.css);
 /*@import url(https://fonts.googleapis.com/css?family=Noto%20Serif%20KR);
 @import url(https://fonts.googleapis.com/css?family=Noto%20Serif%20JP);
 @import url(https://fonts.googleapis.com/css?family=Noto%20Serif%20SC); */
